data/derived/comb/progs/unify/prog7121.ml.out
Characters 141-152:
  digitalRoot end
  ^^^^^^^^^^^
Error: This expression has type int -> 'a
       but an expression was expected of type 'a
       The type variable 'a occurs inside int -> 'a
